# AncestryTree

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ancestrytree_screen_reader.txt  commands.txt
.github/workflows/: build.yml  docs.yml  quality.yml  release.yml  test.yml
assets/: auto_save.json  auto_save.json.bak  example_tree.json  example_tree_2.json  manual_save.json  rickert_tree.json  rickert_tree.json.bak  royals.json  saved_queries.cfg  settings.cfg
assets/imports/import_1761863378041/: tree.json  tree.json.bak
build_clang/: CTestTestfile.cmake  cmake_install.cmake
build_clang/Testing/Temporary/: CTestCostData.txt
build_windows/: CTestTestfile.cmake  cmake_install.cmake
docs/: Doxyfile  coding-standards.md  dependencies.md
include/: app.h  app_bootstrap.h  app_cli.h  assets.h  at_date.h  at_error.h  at_log.h  at_memory.h  at_string.h  camera_controller.h  certificate_render.h  detail_content_builder.h  detail_gallery.h  detail_timeline.h  detail_view.h  event.h  expansion.h  file_dialog.h  graphics.h  image_panel.h  interaction.h  json_parser.h  layout.h  life_particles.h  onboarding.h  path_utils.h  persistence.h  persistence_schema.h  person.h  progress_tracker.h  relationship.h  render.h  render_internal.h  render_labels.h  screen_reader.h  search.h  search_saved.h  selection_particles.h  settings.h  settings_runtime.h  (+13 more)
roadmaps/: implementation.txt
scripts/: check_dependencies.py  create_detail_view.py  run_memory_checks.ps1  run_memory_checks.sh  setup_dependencies.ps1
src/: app_bootstrap.c  app_cli.c  app_state.c  assets.c  at_date.c  at_log.c  at_memory.c  at_string.c  camera_controller.c  certificate_render.c  detail_content_builder.c  detail_gallery.c  detail_timeline.c  detail_view.c  event.c  expansion.c  file_dialog.c  graphics.c  image_panel.c  interaction.c  json_parser.c  json_parser.h  layout.c  life_particles.c  main.c  onboarding.c  path_utils.c  persistence.c  persistence_auto_save.c  persistence_common.c  persistence_internal.h  persistence_reader.c  persistence_writer.c  person.c  progress_tracker.c  relationship.c  render.c  render_batcher.c  render_labels.c  render_labels.h  (+20 more)
tests/: test_app_state.c  test_assets.c  test_bootstrap.c  test_camera_controller.c  test_cli.c  test_date.c  test_detail_content.c  test_detail_gallery.c  test_detail_timeline.c  test_detail_view.c  test_error_macros.c  test_events.c  test_expansion.c  test_file_dialog.c  test_framework.c  test_framework.h  test_graphics.c  test_image_panel.c  test_integration.c  test_interaction.c  test_json_parser.c  test_layout.c  test_life_particles.c  test_log.c  test_main.c  test_memory.c  test_memory_suite.c  test_onboarding.c  test_path_utils.c  test_persistence.c  test_persistence_auto_save.c  test_persistence_helpers.c  test_persistence_helpers.h  test_person.c  test_relationship.c  test_render.c  test_render_labels.c  test_screen_reader.c  test_search.c  test_selection_particles.c  (+12 more)
